# ChangeLog for www-client/opera
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera/ChangeLog,v 1.726 2012/06/27 20:57:09 jer Exp $

  27 Jun 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Improve USE flag descriptions.

  21 Jun 2012; Jeroen Roovers <jer@gentoo.org> opera-12.00.1467-r1.ebuild:
  Do not call get_libdir in global scope.

*opera-12.00.1467-r1 (20 Jun 2012)

  20 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.00.1467-r1.ebuild:
  Add more pax-marking by Alex Efros (bug #421859).

  18 Jun 2012; Jeroen Roovers <jer@gentoo.org> opera-12.00.1467.ebuild:
  Reorder SLOTs in x11-libs/gtk+ USE=gtk RDEPEND.

  15 Jun 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove USE=gtk3 description.

  15 Jun 2012; Jeroen Roovers <jer@gentoo.org> -opera-11.64.1403.ebuild:
  Old.

  14 Jun 2012; Jeff Horelick <jdhore@gentoo.org> opera-12.00.1467.ebuild:
  marked x86 per bug 421075

  14 Jun 2012; Agostino Sarubbo <ago@gentoo.org> opera-12.00.1467.ebuild:
  Stable for amd64, wrt bug #412075

  14 Jun 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.00.1450.ebuild,
  -opera-12.00.1454.ebuild, -opera-12.00.1456.ebuild, opera-12.00.1467.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/14/twelve-under-the-hood-improve
  ments-in-opera-12

*opera-12.00.1467 (13 Jun 2012)

  13 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.00.1467.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/13/rc6

  12 Jun 2012; Jeroen Roovers <jer@gentoo.org> -opera-12.00.1448.ebuild,
  opera-12.00.1456.ebuild:
  Remove IUSE=gtk3 (bug #420563).

*opera-12.00.1456 (12 Jun 2012)

  12 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.00.1456.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/12/12rc4

*opera-12.00.1454 (11 Jun 2012)

  11 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.00.1454.ebuild: