@@ -1,19 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST opera-12.00-1467.i386.freebsd.tar.xz 12617668 RMD160 7d805d318d1b33f631e29aece0dd1abb3a010580 SHA1 bf4dcfb4145a7c1c60643803fcf57555610d5a50 SHA256 4f572f7c2c1198b7e638b4850a0c93f0465edfe8afacc6264cee1d103ff22594
-DIST opera-12.00-1467.i386.linux.tar.xz 12635300 RMD160 f37763f34568f780eb178827db2e798ed556054d SHA1 69ddd3f49d9ec444e83e598a715499234020ea5e SHA256 d5683f5a4cf0cfd9ce715359b77909c7923c85bcec98513907c1844285356fdc
-DIST opera-12.00-1467.x86_64.linux.tar.xz 13740280 RMD160 ad7218a3d05200f5b5af949b6afc5209587566ad SHA1 7a8f9299901846c77ea162d616d19c2dcbcc755b SHA256 7c3dbe122b1fd20123f1b48a420dea080cc24ede4183d47d66b383c2b7ca5051
-EBUILD opera-12.00.1467-r1.ebuild 5597 RMD160 20fe04fa4fc82427cc1980ecd529c994e85cfb25 SHA1 f148cf73139eb21572914f6e2edcbe3624ceb3f6 SHA256 bc2ad9b97815531874102fd0dde5348b0f16df57a809e1f4048435ed34fa06e1
-EBUILD opera-12.00.1467.ebuild 5546 RMD160 ec18427f5bcdf7ba3f396fa354973d660508c2c3 SHA1 6e6cd59243f31fa85487caed168f79a30a76ee18 SHA256 844806f000da20f2bd4c17ffebe3968686dc0add87cc4b6c1a4a1efa3c954745
-MISC ChangeLog 25028 RMD160 f661467119a0a282e6e40c04b68f9171edbb0fcd SHA1 1450afbdc1cf9c75a89e3e04cb901f468e6eee1b SHA256 98f36e7008175b637c0c47190f1cd8867e16ef27ba9834186eca6d32d24cd8ca
-MISC ChangeLog-2010 112299 RMD160 e786fcfeb4ac57db285ff420ccd9705b7c1f298c SHA1 09aef1136180ae363fd3c6bdbd3eb27f996f80c5 SHA256 5c3b5c58119b4a6b1911d840892c42234f25dae57452287fb0a9e6cca78ed171
-MISC metadata.xml 672 RMD160 410aae18fe104a0a4742eb74d74993c0b8df871c SHA1 6559cf2f2fac6db2ee3b90213739809a0c716bec SHA256 3fdb3d81bfb1c469bdf86811329eb4888ce909cce63d2aa71257b91a6f8f012e
-MISC metadata.xml.orig 620 RMD160 f8a12fd1775a3eedf492dad65b79198d452f60a4 SHA1 d537cfe0d1da51a92612821d24ac851174389340 SHA256 208c8c09c43c5092d2491833c97990cd5b3d8fce38e03d70d90f0ffbbee84282
+DIST opera-12.00-1467.i386.freebsd.tar.xz 12617668 SHA256 4f572f7c2c1198b7e638b4850a0c93f0465edfe8afacc6264cee1d103ff22594 SHA512 39c51854e03345833ae24ed12358c3cd988c05ad4500c5e2868de08bf222b60d9fc4c56bae7e7022c61323653ae7bca0b134c5cbd10a5566da04ed85c1c21908 WHIRLPOOL 340086237ed1131b88c909ac43eaae26aa911be8149b28bdae7181a7ad3a80bf906298c917ae41bf5d4e3276b83bb866e22d273d738e948162bcf00787ca2622
+DIST opera-12.00-1467.i386.linux.tar.xz 12635300 SHA256 d5683f5a4cf0cfd9ce715359b77909c7923c85bcec98513907c1844285356fdc SHA512 bec8e954e039c8d68e6c0a6276fe3599c2a0a272b37071a24e5fe401f758f40d46fa50ab024412ed44ab7adf1f3aeec417a83c92deadc27d59eec3eada825a61 WHIRLPOOL 90cdafb947079fb40d89297a3e0017ccee2702f646f4fd26645b0b1717a2cf80982921712da332470c036ff2c287957a0c9f87a63a1682022fc1d82ce9f4b88d
+DIST opera-12.00-1467.x86_64.linux.tar.xz 13740280 SHA256 7c3dbe122b1fd20123f1b48a420dea080cc24ede4183d47d66b383c2b7ca5051 SHA512 4a8d443dff9aec9f26ca2a6c78c4930ff6148352e3a27c3392b092ef0518644dc12f061cdfb28d1b402cce4be8963f1bd7207f53e88c01ecde421a8dcec06284 WHIRLPOOL d0056d3e8526f9bb20c5bdd76b5196d67b3c1fe53c042e6414c64ee869538a62551bcc3751357dc7d44220cda3d4305265239fa753ecbfe3925fdcc401ae088f
+DIST opera-12.01-1517.i386.freebsd.tar.xz 12705084 SHA256 9bd24e9015fd72eb5e38c7b6b3223f2aa38a30f2134a409d5d307cb3744a9b5b SHA512 319198e996764b946248f0884ef9eaab0efbd31edc12678dd4decd4e91bb0212b556474c6634690a9b2ad587998d2243feda21171039e2322ac2bf9c63cb08bb WHIRLPOOL 0ac6ae44ebf6d83b9de4bc408896f00a4f3a2f628bc07ce129abcd46a7ba6c3cc9aca99311c1cb4295978afd2354c90ed3c0620014428f3feaafcd936b856a4c
+DIST opera-12.01-1517.i386.linux.tar.xz 12810124 SHA256 89608c30ebe219548d0edc35755e59da8bf6c59bb92e8b0f52f1940a3de26ba0 SHA512 4641c37796acf0ba3926212ceaabb09963895b76f99abff20b55de87f1d127db53502728ffc0bcd92654beef6217a8b41fac3b89dd386e5c5b243e3db29e34b2 WHIRLPOOL 8bfce83be314f11f7352924ac66dc10faf97c213a2579bd93b2f4145d1b261729c9b6abce04b3d31177776b7756c625461df4e6a61e6804a415a68edc208520b
+DIST opera-12.01-1517.x86_64.linux.tar.xz 13229840 SHA256 8d3407aeb29c6e806ad1dda7aaec76ef15a6088340c0c6bd986b6118b985a043 SHA512 12eaf134ab1444ddbadacffe2a681d124166dc47f3e186b280b0ab69445c37ea456ebe64648b27873413604f32a859915d85a4e820fd35ffdd7a3016ddf972f7 WHIRLPOOL 88d1306ccd8e05de1962ae76807d5436ec086c5691919c8bda5d465b98f8fd927efe59a2adde39e5cb03948831603c33c93e54cb6d4817e236c7100245dac178
+EBUILD opera-12.00.1467-r1.ebuild 5597 SHA256 bc2ad9b97815531874102fd0dde5348b0f16df57a809e1f4048435ed34fa06e1 SHA512 0cc75b776cf2f80bd4bee2d2b80ba144406828627e10bd434fb778ba8acb8046b2e5f31a35c1165b72c99749285166559a950151897e12ff5bccf01a02fd0c0f WHIRLPOOL 9d99e243c32328ebf41eca404e14e11ee2085d4cd776d6841cd24707b7d57afff953b7361dd807369e81ed9aa69940668c6fe82bd159176f9bf65d3d958de83b
+EBUILD opera-12.00.1467.ebuild 5546 SHA256 844806f000da20f2bd4c17ffebe3968686dc0add87cc4b6c1a4a1efa3c954745 SHA512 de1463279b831009f7bb25cc0f3bb803bb9659b041a31e9dea0198cc93dc2d4be24f14854c5e586bb56ae047806b7e6d819b5d7bb34f00ca304585f603f2a95e WHIRLPOOL 307eed0b3eddbc434d7c33ac88d45cb70cac4fee63690441407e91b4ce0c925c781d0b9d31b3ed59cf5f262b739efafee2a18e1c19d543f48317637d1433b32d
+EBUILD opera-12.01.1517.ebuild 5603 SHA256 3ce958a05d231b651bba0bd4862b2e306c38c94ea611ca17af52f991400953af SHA512 7826591f251e9e23ccbf824c0858fc718f1168c33b6eaa70fa6f1bfba697fc5b88d92553a60482db5d75e34797e5f6e821819a2765dcdb86982fd71f57efb207 WHIRLPOOL 1db75a9dd88d0344a9d95962d294cf445c263bc79452c9ba35e1c08d87b650caef364942c9647f8be4b0a96392d05bcfa8ee828765e4095ecc12b8df02c2fece
+MISC ChangeLog 25202 SHA256 8c9b326bfe6d4dfb5133f7f3cf648c8fa4be89f52cd17c18a25392fed6bacb45 SHA512 e09a7af2ee6f2559e9effb81f06fe9066d880f1a2fe88dddd81402ea159902b8f26b91b2e5316131be549def198ffd8973f1f57f9090bf26cb4e1afa2cfb3cda WHIRLPOOL 2869ec873a16b75fc682d6b1bf98231a0c79b33e2dc2647b6194929b53c8653e7179705f237a4ac45e17de3c2cc3ac85a9d46ff87cb5068f558300e3b4c5d8ce
+MISC ChangeLog-2010 112299 SHA256 5c3b5c58119b4a6b1911d840892c42234f25dae57452287fb0a9e6cca78ed171 SHA512 9dc4dc7e7508bb1621c390837ec2e47d9e96075906b2060be419ee64e505c8f0da9e4d3a8bc7cc2de66c6efc383f026afb8fa5e886afa15da6349514a93c9edb WHIRLPOOL edaf1c2e810e91d37b2d90847640900374b447a12e2e0e927654966cc18c3a14f332ce6daa07c5a0049da06f5e89bfd0daddb5f73a4d79b334ded4397349cf7a
+MISC metadata.xml 672 SHA256 3fdb3d81bfb1c469bdf86811329eb4888ce909cce63d2aa71257b91a6f8f012e SHA512 4aae9fbf8a753b30b7ef5868b0084c1eb55ed34cc9e1ece8814db13230e07b455f45be936c810bc8a9426ce6c9eaa7449612ac50b47aad253dcae57a683b5b6a WHIRLPOOL 9dc490f6cffad6c3ff1beb27a74818fc66a194856b7d5a84972d387a6bcdf81cda95bb2d1f2b5cb9d58f47cf898bcede39b2a68fdaa5405c5efbffaa51986f3d
+MISC metadata.xml.orig 620 SHA256 208c8c09c43c5092d2491833c97990cd5b3d8fce38e03d70d90f0ffbbee84282 SHA512 94fd155a359f80569f52b59f078483e942bf56f2a756a922cfd2d05e3ce45bfe02e919cb3bd23441d9acc9f29f4cd6406a77eae19720550e64fcf7fcecb380a4 WHIRLPOOL 764ef31d6f41a9ca08a6652c4355e02de657de0e61daec691630c6e79d085af4d655504799de432c3a820bd3aa67a22db7564cf5d605df316ef93730f32f61e4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk/rc6oACgkQVWmRsqeSphNwJgCggK85m9pQj4AFqdBrp35uWMH3
-EK8Ani6wGZn0n6hlR42Q1iyhQNgZ2M+c
-=+H3e
+iEYEAREIAAYFAlAJeGYACgkQVWmRsqeSphNDsACePLDa6yH2TonihKtSmFx7roYi
+KMYAmgO9gxFFEVH07Vf3sQaZ80/woeeC
+=iL3m
 -----END PGP SIGNATURE-----
