@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera/ChangeLog,v 1.726 2012/06/27 20:57:09 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/opera/ChangeLog,v 1.727 2012/07/20 15:25:19 jer Exp $
+
+*opera-12.01.1517 (20 Jul 2012)
+
+  20 Jul 2012; Jeroen Roovers <jer@gentoo.org> +opera-12.01.1517.ebuild:
+  http://my.opera.com/desktopteam/blog/2012/07/20/more-12-01-fixes
 
   27 Jun 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
   Improve USE flag descriptions.
